[gd_scene load_steps=16 format=3 uid="uid://cvchj3fvtsxu2"]

[ext_resource type="Script" uid="uid://d2c6xiys1vt8l" path="res://scenes/stages/2/stage_ui.gd" id="1_4pp44"]
[ext_resource type="Texture2D" uid="uid://cgciicfhw5185" path="res://assets/stage/ui/retry.png" id="1_dejwn"]
[ext_resource type="Texture2D" uid="uid://ooh1w1823fc8" path="res://assets/stage/ui/retry hover.PNG" id="2_4pp44"]
[ext_resource type="Texture2D" uid="uid://dng21hjto6tw3" path="res://assets/stage/ui/pause (1).PNG" id="3_2cdop"]
[ext_resource type="Texture2D" uid="uid://bahpi1u4in6pg" path="res://assets/stage/ui/pause hover (1).PNG" id="4_tgh5a"]
[ext_resource type="Texture2D" uid="uid://fxnxv4ru757c" path="res://assets/stage/ui/play.PNG" id="6_tgh5a"]
[ext_resource type="Texture2D" uid="uid://drcrewch05s5t" path="res://assets/stage/ui/play hover.PNG" id="7_20x5i"]
[ext_resource type="Texture2D" uid="uid://bobcobpxtlomp" path="res://assets/stage/ui/settings (2).PNG" id="8_vr2jq"]
[ext_resource type="Texture2D" uid="uid://2muu8bvjp2hn" path="res://assets/stage/ui/settings hover.PNG" id="9_d4pai"]
[ext_resource type="Texture2D" uid="uid://561fkd2myoio" path="res://assets/stage/ui/exit (2).PNG" id="10_04jyq"]
[ext_resource type="Texture2D" uid="uid://dnko660ycdijx" path="res://assets/stage/ui/exit hover.PNG" id="11_onpeg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_04jyq"]
bg_color = Color(0.137255, 0.27451, 0.243137, 0.94902)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.25)
shadow_size = 4

[sub_resource type="Theme" id="Theme_onpeg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i0c1o"]
bg_color = Color(0.054902, 0.243137, 0.258824, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.15)
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5f67d"]
bg_color = Color(0.0805442, 0.312109, 0.331413, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.15)
shadow_size = 2

[node name="StageUI" type="Control"]
process_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4pp44")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
process_mode = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -149.0
offset_top = 7.0
offset_right = 311.0
offset_bottom = 207.0
grow_horizontal = 0
scale = Vector2(0.3, 0.3)
theme_override_constants/separation = 60

[node name="RetryButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("1_dejwn")
texture_hover = ExtResource("2_4pp44")

[node name="PauseButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_2cdop")
texture_hover = ExtResource("4_tgh5a")

[node name="Control" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.36862746, 0.36862746, 0.36862746, 0.7921569)

[node name="PausePopup" type="HBoxContainer" parent="Control"]
process_mode = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.504
anchor_bottom = 0.5
offset_left = -193.0
offset_top = -58.0
offset_right = 461.88
offset_bottom = 142.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.6, 0.6)
theme_override_constants/separation = 100

[node name="ContinueButton" type="TextureButton" parent="Control/PausePopup"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture_normal = ExtResource("6_tgh5a")
texture_hover = ExtResource("7_20x5i")

[node name="Settings" type="TextureButton" parent="Control/PausePopup"]
layout_mode = 2
texture_normal = ExtResource("8_vr2jq")
texture_hover = ExtResource("9_d4pai")

[node name="Exit" type="TextureButton" parent="Control/PausePopup"]
layout_mode = 2
texture_normal = ExtResource("10_04jyq")
texture_hover = ExtResource("11_onpeg")

[node name="OptionsMenu" type="Control" parent="Control"]
process_mode = 2
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control/OptionsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_04jyq")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/OptionsMenu/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="Control/OptionsMenu/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Options"
horizontal_alignment = 1

[node name="Fullscreen" type="HBoxContainer" parent="Control/OptionsMenu/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/OptionsMenu/Panel/VBoxContainer/Fullscreen"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Fullscreen"

[node name="CheckBox" type="CheckBox" parent="Control/OptionsMenu/Panel/VBoxContainer/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
mouse_default_cursor_shape = 2
theme = SubResource("Theme_onpeg")

[node name="Resolution" type="HBoxContainer" parent="Control/OptionsMenu/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/OptionsMenu/Panel/VBoxContainer/Resolution"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Resolution"

[node name="OptionButton" type="OptionButton" parent="Control/OptionsMenu/Panel/VBoxContainer/Resolution"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
mouse_default_cursor_shape = 2
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1600x900"
popup/item_1/id = 1
popup/item_2/text = "1280x720"
popup/item_2/id = 2

[node name="MasterVolume" type="HBoxContainer" parent="Control/OptionsMenu/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/OptionsMenu/Panel/VBoxContainer/MasterVolume"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Master Volume"

[node name="HSlider" type="HSlider" parent="Control/OptionsMenu/Panel/VBoxContainer/MasterVolume"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
mouse_default_cursor_shape = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolume" type="HBoxContainer" parent="Control/OptionsMenu/Panel/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/OptionsMenu/Panel/VBoxContainer/MusicVolume"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="Control/OptionsMenu/Panel/VBoxContainer/MusicVolume"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
mouse_default_cursor_shape = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="Back" type="Button" parent="Control/OptionsMenu/Panel"]
custom_minimum_size = Vector2(200, 64)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -92.0
offset_right = 100.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_i0c1o")
theme_override_styles/hover = SubResource("StyleBoxFlat_5f67d")
text = "Back
"

[connection signal="pressed" from="HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="HBoxContainer/PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="pressed" from="Control/PausePopup/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Control/PausePopup/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Control/PausePopup/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Control/OptionsMenu/Panel/VBoxContainer/Fullscreen/CheckBox" to="." method="_on_fullscreen_pressed"]
[connection signal="pressed" from="Control/OptionsMenu/Panel/Back" to="." method="_on_back_pressed"]
